setup process queue

--- a/.env-example
+++ b/.env-example
@@ -4,3 +4,9 @@ MAIN_SERVER_ENDPOINT=
 AWS_PUBLIC_KEY=
 AWS_PRIVATE_KEY=
 S3_BUCKET=
+
+
+LR=0.0001
+LAMBDA_STYLE=1e10
+LAMBDA_CONTENT=1e5
+EPOCH=200
