--- a/.env-example
+++ b/.env-example
@@ -4,7 +4,9 @@ MAIN_SERVER_ENDPOINT=
 AWS_PUBLIC_KEY=
 AWS_PRIVATE_KEY=
 S3_BUCKET=
-
+EXCHANGE_TRAIN_SERVER=
+ROUTING_KEY_TRAIN=
+ROUTING_KEY_RE_TRAIN=
 
 LR=0.0001
 LAMBDA_STYLE=1e10
